# Tama32

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  sdkconfig
main/: CMakeLists.txt  Tama32.c  Tamagotchi.c
main/Game/: Game.h
main/Sprites/: Sprites.h  pookie.aseprite  spritesData.h
main/Sprites/Pookiee/: Pookiee.h
main/Tama/: Tama.h
